- https://github.com/eclipse-sirius/sirius-web/issues/3391[#3391] [diagram] Some changes have been made in the View DSL for diagram:
* super types `style` has been removed from `NodeStyleDescription`
* attribute `background` has been added to `RectangularNodeStyleDescription` and `IconLabelNodeStyleDescription`

=== Dependency update

- Move to docker compose v2 for our GitHub Actions workflow.
- [test] Switch to ArchUnit 1.3.0 to restore architectural tests which were failing recently
- https://github.com/eclipse-sirius/sirius-web/issues/3277[#3277] [gantt] Move to @ObeoNetwork/gantt-task-react 0.4.9 to benefit for enhancements

=== Bug fixes

- https://github.com/eclipse-sirius/sirius-web/issues/3183[#3183] [diagram] Fix an issue in which an edge between a child and its parent passed entirely through the child.
- https://github.com/eclipse-sirius/sirius-web/issues/3287[#3287] [form] The label sent with the form refreshed event payload is the representation name, not the always the `FormRepresentationDescription#titleExpression`
- https://github.com/eclipse-sirius/sirius-web/issues/3290[#3290] [diagram] Fix an issue that prevent the group palette to be displayed if only list children are selected.
- https://github.com/eclipse-sirius/sirius-web/issues/3018[#3018] [gantt] Fix reference widgets for AbstractTask Details
- https://github.com/eclipse-sirius/sirius-web/issues/3298[#3298] [diagram] Fix an issue in which the diagram had unnecessary rendering
- https://github.com/eclipse-sirius/sirius-web/issues/3317[#3317] [diagram] Fix an issue that caused a crash when selection changes were made too quickly
- https://github.com/eclipse-sirius/sirius-web/issues/3269[#3269] [diagram] Disable node drag and drop during multi selection
- https://github.com/eclipse-sirius/sirius-web/issues/3352[#3352] [diagram] Fix an issue that prevents pinned elements from being unpinned unintentionally