@@ -119,7 +119,7 @@ const buildMarkerAttributes = (
   };
 };
 
-const buildArrow = (id: string, path: string, edgeColor: string, fillColor: string) => {
+const buildArrow = (id: string, path: string, edgeColor: string | undefined, fillColor: string | undefined) => {
   return (
     <marker {...buildMarkerAttributes(id, 10, 10, 8, 5)}>
       <path fill={fillColor ? fillColor : 'white'} d={path} stroke={edgeColor} strokeWidth={1} />
@@ -127,7 +127,7 @@ const buildArrow = (id: string, path: string, edgeColor: string, fillColor: stri
   );
 };
 
-const buildDiamond = (id: string, path: string, edgeColor: string, fill: boolean) => {
+const buildDiamond = (id: string, path: string, edgeColor: string | undefined, fill: boolean) => {
   return (
     <marker {...buildMarkerAttributes(id, 16, 10, 15, 5)}>
       <path fill={fill ? edgeColor : 'white'} d={path} stroke={edgeColor} strokeWidth={1} />
@@ -135,7 +135,7 @@ const buildDiamond = (id: string, path: string, edgeColor: string, fill: boolean
   );
 };
 
-const buildCircle = (id: string, edgeColor: string, fill: boolean) => {
+const buildCircle = (id: string, edgeColor: string | undefined, fill: boolean) => {
   return (
     <marker {...buildMarkerAttributes(id, 10, 10, 9, 5)}>
       <circle r={4.5} cx={5} cy={5} fill={fill ? edgeColor : 'white'} stroke={edgeColor} strokeWidth={1} />
@@ -155,67 +155,67 @@ export const MarkerDefinitions = () => {
 
 const OutputArrow = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildArrow(id, OutputArrowPath, strokeColor, theme.palette.background.default);
 };
 
 const InputArrow = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildArrow(id, InputArrowPath, strokeColor, 'transparent');
 };
 
 const OutputClosedArrow = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildArrow(id, OutputClosedArrowPath, strokeColor, theme.palette.background.default);
 };
 
 const InputClosedArrow = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildArrow(id, InputClosedArrowPath, strokeColor, theme.palette.background.default);
 };
 
 const OutputFillClosedArrow = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildArrow(id, OutputClosedArrowPath, strokeColor, strokeColor);
 };
 
 const InputFillClosedArrow = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildArrow(id, InputClosedArrowPath, strokeColor, strokeColor);
 };
 
 const Diamond = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildDiamond(id, DiamondPath, strokeColor, false);
 };
 
 const FillDiamond = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildDiamond(id, DiamondPath, strokeColor, true);
 };
 
 const Circle = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildCircle(id, strokeColor, false);
 };
 
 const FillCircle = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return buildCircle(id, strokeColor, true);
 };
 
 const CrossedCircle = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return (
     <marker {...buildMarkerAttributes(id, 10, 10, 9, 5)}>
       <circle r={4.5} cx={5} cy={5} stroke={strokeColor} fill={theme.palette.background.default} />
@@ -227,7 +227,7 @@ const CrossedCircle = ({ id, edgeColor }: MarkerProps) => {
 
 const InputArrowWithDiamond = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return (
     <marker {...buildMarkerAttributes(id, 24, 10, 23, 5)}>
       <path d={InputArrowPath} stroke={strokeColor} fill={'transparent'} strokeWidth={1} />
@@ -243,7 +243,7 @@ const InputArrowWithDiamond = ({ id, edgeColor }: MarkerProps) => {
 
 const InputArrowWithFillDiamond = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return (
     <marker {...buildMarkerAttributes(id, 24, 10, 23, 5)}>
       <path d={InputArrowPath} stroke={strokeColor} fill={'transparent'} strokeWidth={1} />
@@ -254,7 +254,7 @@ const InputArrowWithFillDiamond = ({ id, edgeColor }: MarkerProps) => {
 
 const ClosedArrowWithVerticalBar = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return (
     <marker {...buildMarkerAttributes(id, 13, 10, 12, 5)}>
       <path
@@ -270,7 +270,7 @@ const ClosedArrowWithVerticalBar = ({ id, edgeColor }: MarkerProps) => {
 
 const ClosedArrowWithDots = ({ id, edgeColor }: MarkerProps) => {
   const theme = useTheme();
-  const strokeColor: string = getSelectedColor(id, edgeColor, theme);
+  const strokeColor: string | undefined = getSelectedColor(id, edgeColor, theme);
   return (
     <marker {...buildMarkerAttributes(id, 13, 10, 12, 5)}>
       <path
@@ -285,8 +285,8 @@ const ClosedArrowWithDots = ({ id, edgeColor }: MarkerProps) => {
   );
 };
 
-const getSelectedColor = (id: string, edgeColor: string, theme: Theme): string => {
-  const selectedColor: string =
+const getSelectedColor = (id: string, edgeColor: string, theme: Theme): string | undefined => {
+  const selectedColor: string | undefined =
     id.endsWith('--selected') && theme.palette.selected ? theme.palette.selected : getCSSColor(edgeColor, theme);
   return selectedColor;
 };
